--- a/epidemiology.Rmd
+++ b/epidemiology.Rmd
@@ -14,43 +14,23 @@ knitr::opts_chunk$set(echo = TRUE)
 library(xml2)
 library(tidyverse)
 
-xml_address = "en_product9_prev.xml"
+require(httr)
 
-diseases_raw = as_list(read_xml(xml_address))
+my_url <- "https://www.orphadata.com/data/xml/en_product9_prev.xml"
+disease_xml <- as_list(read_xml(my_url))
 
-diseases_df = tibble::as_tibble(diseases_raw) %>%
-  unnest_longer(JDBOR)
+data<-disease_xml$JDBOR
 
-disease_df_wider = diseases_df %>%
-  dplyr::filter(JDBOR_id == "Disorder") %>%
-  unnest_wider(JDBOR) 
+df = tibble::as_tibble(data) %>%
+  unnest_wider(DisorderList) %>% 
+  unnest(Name,OrphaCode,ExpertLink,DisorderType, DisorderGroup) %>% 
+  unnest(DisorderType, DisorderGroup) %>% 
+  unnest(PrevalenceList) %>% 
+  unnest_wider(PrevalenceList) %>% 
+  unnest(PrevalenceClass,PrevalenceType,PrevalenceQualification,PrevalenceGeographic,PrevalenceValidationStatus,ValMoy,Source) %>% 
+  unnest(PrevalenceClass,PrevalenceType,PrevalenceQualification,PrevalenceGeographic,PrevalenceValidationStatus) %>% 
+  select(-Availability)
 
-
-disease = disease_df_wider %>%
-  # 1st time unnest to release the 2-dimension list?
-  unnest(cols = names(.)) %>%
-  # 2nd time to nest the single list in each cell?
-  unnest(cols = names(.)) %>%
-  unnest(cols = names(.)) %>%
-  unnest(cols = names("PrevalenceList")) %>%
-  # convert data type
-  readr::type_convert() 
-
-
-disease %>%
-  as_tibble() %>%
-  unnest(cols = names("PrevalenceList"))
-
-### need to figure out how to unlist/unnest PrevalenceList data 
-
-#write_csv(disease, "disease_prev.csv")
 ```
-
-```{r}
-disease_prev <- read_csv("disease_prev.csv")
-```
-
-
-
 
 
